# near-openapi-client

./: .gitignore  Cargo.toml  README.md  build.sh  check_same.sh  gen.sh  generate.sh  openapi.json  progenitor_fixes.py  test.sh  tx.py
.github/workflows/: ci.yml  regenerate-client.yml  release-plz.yml
example/: Cargo.toml  contract_rs.wasm  output.txt
example/src/: main.rs
example/tests/: global_contract_identifier.rs  tests.rs
near-openapi-client/: CHANGELOG.md  Cargo.toml
near-openapi-client/src/: lib.rs
near-openapi-types/: CHANGELOG.md  Cargo.toml
near-openapi-types/src/: error.rs  lib.rs  util.rs
near-openapi-types/tests/: global_contract_identifier_view.rs
